appear + shield animation